<resources>
    <string name="app_name">SETECH</string>
    <string name="categories">Categories</string>
    <string name="cpu">CPUs</string>
    <string name="gpu">GPUs</string>
    <string name="motherboard">Motherboards</string>
    <string name="cpuDescription">The central processing unit (CPU) is the part of the computer that makes the computer run by carrying out instructions. </string>
    <string name="gpuDescription">Graphics cards take data from the CPU and turn it into quality pictures. Graphic cards are the key to high performance and excellent colours. </string>
    <string name="motherboardDescription">Motherboards bring together a unique blend of features and technologies that offer users the absolute ultimate platform for their computing needs. </string>
    <string name="hint_search">Search for an item...</string>
    <string name="detailsDefaultTitle">Title</string>
    <string name="detailsDefaultCategory">Category</string>
    <string name="detailsDefaultPrice">Price</string>
    <string name="detailsDefaultPriceNum">$0.00</string>
    <string name="detailsMostViewed">Most viewed in category</string>
    <string name="detailsDefaultContentDescription">Item image</string>
    <string name="first_image_button">First image button</string>
    <string name="second_image_button">Second image button</string>
    <string name="third_image_button">Third image button</string>
    <string name="right_image_button">Right image button</string>
    <string name="left_image_button">Left image button</string>
    <string name="sort_by">Sort By</string>
    <string name="listPriceButton">Price</string>
    <string name="listNameButton">Name</string>
    <string name="listViewsButton">Views</string>
    <string name="listIncreasingButton">Increasing</string>
    <string name="listDecreasingButton">Decreasing</string>
    <string name="listNoFoundText">No items were found for your search query :(</string>
    <string name="mainActivityMostViewedText">Most viewed</string>
    <string name="defaultCategoryCardName">Category card name</string>
    <string name="categoryCardDescription">Category card description</string>
    <string name="categoryImageViewDescription">Category Image</string>
    <string name="number_of_cores">Number of Cores</string>
    <string name="default_cores">default cores</string>
    <string name="clock_speed">Clock speed</string>
    <string name="default_hz">default Hz</string>
    <string name="form_factor">Form Factor</string>
    <string name="default_form_factor">default form factor</string>
    <string name="mb_socket">MB Socket</string>
    <string name="default_mb_socket">default mb socket</string>
    <string name="chipset">Chipset</string>
    <string name="default_chipset">default chipset</string>
    <string name="spec_name">Spec Name</string>
    <string name="spec_value">Spec Value</string>
    <string name="setech">SETECH</string>
</resources>