<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.detailsActivity.DetailsActivity">

    <ProgressBar
        android:id="@+id/detailsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="123dp"
        android:layout_height="109dp"
        android:indeterminateTint="@color/teal_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/screenPadding"
            android:layout_marginRight="@dimen/screenPadding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/leftDetailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/left_image_button"
                    app:srcCompat="@drawable/ic_arrow_left_filled" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/detailsItemImage"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:contentDescription="@string/detailsDefaultContentDescription"
                        app:srcCompat="@drawable/cpui10400f" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/imageCircle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/first_image_button"
                            app:srcCompat="@drawable/ic_circle_filled" />

                        <ImageButton
                            android:id="@+id/imageCircle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/second_image_button"
                            app:srcCompat="@drawable/ic_circle_hollow" />

                        <ImageButton
                            android:id="@+id/imageCircle3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/third_image_button"
                            app:srcCompat="@drawable/ic_circle_hollow" />
                    </LinearLayout>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/rightDetailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/right_image_button"
                    app:srcCompat="@drawable/ic_arrow_right_filled" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailsItemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/detailsDefaultTitle"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/detailsTitle"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailsItemCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/detailsDefaultCategory"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/detailsCategory"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/specificationsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/detailsDefaultPrice"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/teal_dark"
                    android:textSize="@dimen/detailsPrice"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailsItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/detailsDefaultPriceNum"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/teal_dark"
                    android:textSize="@dimen/detailsPrice"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/detailsItemPrice2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/detailsMostViewed"
                android:textAlignment="textStart"
                android:textColor="@color/teal_dark"
                android:textSize="@dimen/detailsCategory"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="55dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>