<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/categoriesCardMargin"
        android:layout_marginBottom="@dimen/categoriesCardMargin"
        app:cardBackgroundColor="@color/teal_dark"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation"
        app:contentPadding="1dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/categoryCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardCornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/categoryCardImage"
                    android:layout_width="@dimen/mediumItemImageSize"
                    android:layout_height="@dimen/mediumItemImageSize"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/categoryImageViewDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingEnd="15dp"
                    android:paddingStart="0dp">

                    <TextView
                        android:id="@+id/categoryCardName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:paddingBottom="6dp"
                        android:text="@string/defaultCategoryCardName"
                        android:textColor="@color/black"
                        android:textSize="@dimen/categoryName"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/categoryCardDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:gravity="center|start"
                        android:text="@string/categoryCardDescription"
                        android:textColor="@color/black"
                        android:textSize="@dimen/categoryCardDescription" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>
</FrameLayout>